# localfunctions

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.test.awsstyle.yml  docker-compose.test.sqs-reuse.yml  docker-compose.test.traefik.yml  docker-compose.test.yml  docker-compose.yml  functions.json.example  prompt.txt
.github/workflows/: ci.yml
docker/: Dockerfile  Dockerfile.alpine  Dockerfile.debian  dnsmasq-awsstyle.conf  elasticmq-reuse.conf  elasticmq.conf  entrypoint.sh
docker/traefik/: Dockerfile  Dockerfile.localfunctions  dnsmasq.conf  dynamic.yml  elasticmq.conf  traefik.yml
src/: lib.rs  main.rs
src/api/: eventstream.rs  function_url.rs  mod.rs  sample_events.rs  virtual_host.rs
src/api/common/: mod.rs  test.rs
src/api/extensions/: mod.rs  test.rs
src/api/functions/: mod.rs  test.rs
src/api/health/: mod.rs  test.rs
src/api/invoke/: mod.rs  test.rs
src/api/runtime/: mod.rs  test.rs
src/api/sns/: mod.rs  test.rs
src/api/streaming/: mod.rs  test.rs
src/config/: mod.rs
src/container/: mod.rs
src/eventsource/: mod.rs  sqs.rs  test.rs  test_helpers.rs
src/eventsource/sns/: mod.rs  test.rs
src/eventsource/sqs/: test.rs
src/extensions/: mod.rs
src/function/: mod.rs
src/metrics/: mod.rs
src/runtime/: mod.rs
src/server/: mod.rs
src/types/: mod.rs
src/watcher/: mod.rs
tests/: bootstrap_failure_integration.rs  concurrent_invocation_integration.rs  container_reuse_integration.rs  docker_awsstyle_integration.rs  docker_pathstyle_integration.rs  docker_sqs_reuse_integration.rs  docker_traefik_integration.rs  e2e_integration.rs  integration_awsstyle.rs  sns_integration.rs  sqs_integration.rs  timeout_integration.rs
tests/fixtures/: functions-sqs-reuse.json  functions-traefik.json
tests/fixtures/nodejs-error/: index.mjs
tests/fixtures/nodejs-hello/: index.mjs
tests/fixtures/python-error/: main.py
tests/fixtures/python-hello/: main.py
tests/fixtures/python-sqs-consumer/: main.py
tests/fixtures/python-timeout/: main.py
tests/sdk/: README.md  package.json  requirements.txt  run_all.sh  test_aws_sdk.mjs  test_boto3.py
