[package]
name = "localfunctions"
version = "0.1.0"
edition = "2021"
description = "A local AWS Lambda emulator"
license = "MIT"

[[bin]]
name = "localfunctions"
path = "src/main.rs"

[dependencies]
# HTTP framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Docker interaction
bollard = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
