[package]
name = "localfunctions"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
description = "A local AWS Lambda emulator"
license = "MIT"

[[bin]]
name = "localfunctions"
path = "src/main.rs"

[lib]
name = "localfunctions"
path = "src/lib.rs"

[dependencies]
# HTTP framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Docker interaction
bollard = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP types
bytes = "1"
http = "1"

# Async stream utilities
futures-util = "0.3"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
tower = { version = "0.5", features = ["util"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
