[package]
name = "localfunctions"
version = "0.2.1"
edition = "2021"
rust-version = "1.83"
description = "A local AWS Lambda emulator"
license = "MIT"

[[bin]]
name = "localfunctions"
path = "src/main.rs"

[lib]
name = "localfunctions"
path = "src/lib.rs"

[dependencies]
# HTTP framework
axum = "0.7"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Docker interaction
bollard = "0.18"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP types
bytes = "1"
http = "1"
http-body-util = "0.1"

# Async stream utilities
futures-util = "0.3"
tokio-stream = "0.1"

# CRC for AWS event stream encoding
crc32c = "0.6"

# URL parsing
form_urlencoded = "1"
url = "2"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# HTTP client (SNS subscription confirmation)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Async trait support
async-trait = "0.1"

# AWS SDK (SQS event source polling, SNS subscription lifecycle)
aws-sdk-sqs = "1"
aws-sdk-sns = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }

# Utilities
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
reqwest = { version = "0.12", features = ["json"] }
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
